--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -30,7 +30,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-*{
+* {
   box-sizing: border-box;
 }
 ul,
@@ -68,7 +68,7 @@ a {
 }
 
 .g-btn {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-weight: 700;
   font-size: 16px;
   line-height: 1.7;
@@ -77,13 +77,17 @@ a {
   color: #000000;
   padding: 9px 23px;
   height: 45px;
-  background: #FFBE2E;
+  background: #ffbe2e;
   border-radius: 10px;
 }
 .s-animation {
   animation: showAnim 1s forwards;
 }
-
+.mb-none {
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
 @keyframes showAnim {
   from {
     transform: translateY(-100px);
@@ -97,4 +101,4 @@ img {
   max-width: 100%;
   height: auto;
 }
-  /* global--css--End */
+/* global--css--End */
