--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,205 +1,235 @@
 header {
-    background: rgba(255, 246, 224, 0.25);
-    padding: 7px 0 7px;
-    @media (max-width:991px) {
-        padding: 16px 0;
+  background: rgba(255, 246, 224, 0.25);
+  padding: 7px 0 7px;
+  transition: 0.4s;
+  &.fixed {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(255, 246, 224, 1);
+    z-index: 9999;
+  }
+  @media (max-width: 991px) {
+    padding: 16px 0;
+  }
+  .container {
+    max-width: 1400px;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: space-between;
+    // @media (max-width:991px) {
+    //     width: 90%;
+    // }
+    .logo {
+      position: relative;
+      z-index: 9999;
+      @media (max-width: 991px) {
+        max-width: 120px;
+        width: 100%;
+      }
     }
-
-    .container {
-        max-width: 1400px;
+  }
+  nav {
+    @media (max-width: 991px) {
+      position: fixed;
+      top: 0;
+      right: -100%;
+      background-color: #fff;
+      width: 100%;
+      height: 100%;
+      z-index: 999;
+      transition: 0.4s;
+      padding-top: 85px;
+      &.open {
+        right: 0;
+      }
+    }
+    ul {
+      @media (max-width: 991px) {
+        flex-direction: column;
+        align-items: flex-start !important;
+        // padding: 0 10px;
         width: 90%;
         margin: 0 auto;
-        justify-content: space-between;
-        // @media (max-width:991px) {
-        //     width: 90%;
-        // }
-
-        .logo {
-            position: relative;
-            z-index: 9999;
-            @media (max-width:991px) {
-                max-width: 120px;
-                width: 100%;
-            }
-        }
-    }
-
-    nav {
-        @media (max-width:991px) {
-            position: fixed;
-            top: 0;
-            right: -100%;
-            background-color: #fff;
-            width: 100%;
-            height: 100%;
-            z-index: 999;
-            transition: 0.4s;
-            padding-top: 60px;
-            &.open {
-                right: 0;
-            }
-        }
-        ul {
-            @media (max-width:991px) {
-                flex-direction: column;
-            }
-            li {
-                a {
-                    font-family: 'Mukta Vaani';
-                    font-weight: 500;
-                    font-size: 20px;
-                    line-height: 55px;
-                    text-align: center;
-                    letter-spacing: 0.18px;
-                    text-transform: capitalize;
-                    margin: 0 20px;
-                    color: #000000;
-    
-                    @media (max-width:1366px) {
-                        font-size: 16px;
-                        margin: 0 10px;
-                    }
-                }
-            }
-        }
-        // .right-side {
-        //     display: none;
-        //     @media (max-width:991px) {
-        //         display: flex;
-        //         justify-content: center;
-        //         gap: 30px;
-        //     }
-        // }
-    }
-
-    .dropdown {
-        position: relative;
-        > a {
-            display: flex;
-            align-items: center;
-        }
-        &:hover {
-            .options {
-               display: block;
-            }
-        }
-        .options {
-           display: none;
-           position: absolute;
-           background-color: #fff;
-           left: 20px;
-           z-index: 1;
-           box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.29);
-           padding: 10px 30px;
-           li {
-            a {
-                font-size: 16px;
-                line-height: 40px;
-                margin: 0;
-            }
-           }
-        }
-    }
-
-    .right-side {
-        gap: 28px;
-
-        @media (max-width:991px) {
-           gap: 10px;
-        }
-
-        .signup-btn {
-            font-family: 'Open Sans';
-            font-weight: 700;
+      }
+      li {
+        a {
+          font-family: "Mukta Vaani";
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 55px;
+          text-align: center;
+          letter-spacing: 0.18px;
+          text-transform: capitalize;
+          margin: 0 20px;
+          color: #000000;
+          @media (max-width: 1366px) {
             font-size: 16px;
-            line-height: 21px;
-            letter-spacing: 0.184221px;
-            text-transform: capitalize;
-            color: #000000;
-            padding: 9px 23px;
-            height: 45px;
-            background: #FFBE2E;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            @media (max-width:991px) {
-                font-size: 13px;
-                padding: 5px 8px;
-                height: 35px;
-            }
-        }
-
-        .flags-dropdown {
-            // display: flex;
-            // align-items: end;
-            gap: 7px;
-            cursor: pointer;
-            position: relative;
-            .flag {
-                img {
-                    @media (max-width:991px) {
-                        width: 28px;
-                    }
-                }
-                span {
-                    img {
-                        width: 9px;
-                        height: 6px;
-                    }
-                }
-            }
-            .flags-options {
-                display: none;
-                position: absolute;
-                left: 0;
-                z-index: 1;
-                background-color: #fff;
-                box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.29);
-                padding: 10px;
-                margin-top: 10px;
-            }
-        }
-        .add-to-cart {
-            img {
-                @media (max-width:991px) {
-                    height: 30px;
-                }
-            }
-        }
-    }
-
-    .menu-btn {
-        display: none;
-        position: relative;
-        z-index: 9999;
-
-        @media (max-width:991px) {
+            margin: 0 10px;
+          }
+          span {
+            line-height: 13px;
             display: block;
-        }
-
-        .bar1,
-        .bar2,
-        .bar3 {
-            width: 30px;
-            height: 3px;
-            background-color: #FAA500;
-            margin: 5px 0;
-            transition: 0.4s;
-        }
-
-        &.change {
-            .bar1 {
-                transform: translate(0, 9px) rotate(-45deg);
+            margin-left: 5px;
+            img {
+              @media (max-width: 1366px) {
+                height: 8px;
+              }
             }
-
-            .bar2 {
-                opacity: 0;
-            }
-
-            .bar3 {
-                transform: translate(0, -7px) rotate(45deg);
-            }
+          }
         }
+      }
     }
+    // .right-side {
+    //     display: none;
+    //     @media (max-width:991px) {
+    //         display: flex;
+    //         justify-content: center;
+    //         gap: 30px;
+    //     }
+    // }
+  }
+  .dropdown {
+    position: relative;
+    > a {
+      display: flex;
+      align-items: center;
+    }
+    &:hover {
+      .options {
+        display: block;
+      }
+    }
+    .options {
+      display: none;
+      position: absolute;
+      background-color: #fff;
+      left: 20px;
+      z-index: 1;
+      box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.29);
+      padding: 10px 30px;
+      li {
+        a {
+          font-size: 16px;
+          line-height: 40px;
+          margin: 0;
+        }
+      }
+    }
+  }
+  .right-side {
+    gap: 28px;
+    @media (max-width: 991px) {
+      gap: 10px;
+    }
+    .signup-btn {
+      font-family: "Open Sans";
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 21px;
+      letter-spacing: 0.184221px;
+      text-transform: capitalize;
+      color: #000000;
+      padding: 9px 23px;
+      height: 45px;
+      background: #ffbe2e;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @media (max-width: 991px) {
+        font-size: 13px;
+        padding: 5px 8px;
+        height: 35px;
+      }
+    }
+    .flags-dropdown {
+      // display: flex;
+      // align-items: end;
+      gap: 7px;
+      cursor: pointer;
+      position: relative;
+      .flag {
+        img {
+          @media (max-width: 991px) {
+            width: 28px;
+          }
+        }
+        span {
+          img {
+            width: 9px;
+            height: 6px;
+          }
+        }
+      }
+      .flags-options {
+        display: none;
+        position: absolute;
+        left: 0;
+        z-index: 1;
+        background-color: #fff;
+        box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.29);
+        padding: 10px;
+        margin-top: 10px;
+      }
+    }
+    .add-to-cart {
+      img {
+        @media (max-width: 991px) {
+          height: 30px;
+        }
+      }
+    }
+  }
+  .menu-btn {
+    display: none;
+    position: relative;
+    z-index: 9999;
+    @media (max-width: 991px) {
+      display: block;
+    }
+    .bar1,
+    .bar2,
+    .bar3 {
+      width: 30px;
+      height: 3px;
+      background-color: #faa500;
+      margin: 5px 0;
+      transition: 0.4s;
+    }
+    &.change {
+      .bar1 {
+        transform: translate(0, 9px) rotate(-45deg);
+      }
+      .bar2 {
+        opacity: 0;
+      }
+      .bar3 {
+        transform: translate(0, -7px) rotate(45deg);
+      }
+    }
+  }
+}
+.mobile-btn {
+  width: 100%;
+  border-bottom: 1px solid #000;
+  padding-bottom: 18px;
+  a {
+    padding: 8px 27px;
+    margin: 12px;
+    border: 1px solid #f5bc39;
+    font-family: "Mukta Vaani";
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: 0.18px;
+    text-transform: capitalize;
+    margin: 0 13px 0 10px;
+    color: #000000;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
 }
